--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     </div>
                     <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                         <label for="" class="form-label">Year of release</label>
-                        <input type="date" class="form-control">
+                        <input type="date" name="" id="" class="form-control">
                     </div>
                     <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                         <label for="" class="form-label">Actor</label>
